Fix huge gap between the search fields and search results in widescreen (>1920 pixels in width) mode.

--- a/css/section.css
+++ b/css/section.css
@@ -18,10 +18,12 @@ section.ResponsiveSection.right {
 @media only screen and (min-width: 1921px) {
 	section.ResponsiveSection.left {
 		float: left;
+		width: 50%
 	}
 
 	section.ResponsiveSection.right {
 		float: right;
+		width: 49%
 	}
 }
 
